# sdl2_text_editor

./: CMakeLists.txt  README.md  main.cpp
